--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ material = "1.7.4"
 composeNavigation = "2.8.3"
 serialization = "1.6.3"
 room = "2.6.1"
+logging = "4.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -52,6 +53,7 @@ serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-jso
 room = { module = "androidx.room:room-runtime", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "logging" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
